pyk/src/tests/unit/kore/test-data/definitions/pass/test-pattern-3.kore
[]

module TEST-PATTERN-3

  axiom{S}
    \and{S}(X:S,X:S) []

endmodule []
