pyk/src/tests/unit/kore/test-data/definitions/fail/test-exception-3.kore
[]

module TEST-EXCEPTION-3

  axiom{S}
    "X:S []

endmodule []
